Fixes example page sticky nav and scrollbars

--- a/source/styleguide/molecules/SgPageShell/SgPageShell.css
+++ b/source/styleguide/molecules/SgPageShell/SgPageShell.css
@@ -56,18 +56,6 @@
       min-width: 300px;
       width: 300px;
     }
-
-    &--scrollbar {
-      height: 100%;
-      opacity: 0.25;
-      right: 0.5em;
-      z-index: 2;
-
-      &--thumb {
-        background-color: var(--sg-color-gray-darker);
-        border-radius: 1rem;
-      }
-    }
   }
 
   &--navOpen {
@@ -96,5 +84,19 @@
       transition: opacity 0.5s, transform 0.5s, z-index 0.5s;
       z-index: 1;
     }
+  }
+}
+
+.SgScrollbars {
+  &__thumb {
+    background-color: var(--sg-color-gray-darker);
+    border-radius: 1rem;
+  }
+
+  &__track {
+    height: 100%;
+    opacity: 0.25;
+    right: 0.5em;
+    z-index: 2;
   }
 }
